Refactor tmux configuration.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,46 +1,69 @@
 # vim: ft=conf fdm=marker et sts=2 sw=2
 
+# Session options {{{1
+# --------------------
+
+# Pane numbering should start from 1 and not 0.
+set-option -g base-index 1
+
+# Default command to be used for new windows.
+set-option -g default-command bash
+
 # The `tmux-256color' terminfo is now shipped with Ubuntu, but on using it,
 # some things (such as being able to select stuff in Vim using the mouse)
 # break. So unless it gets accepted widely, it's safer to stick to
 # screen-256color.
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 
-set -g escape-time 0
-set -g history-limit 50000
+# The time in milliseconds for which tmux waits after an escape is input to
+# determine if it is part of a function or meta key sequences.
+set-option -g escape-time 0
 
-set -g renumber-windows on
-set -g xterm-keys on
+# The maximum number of lines held in a window's history.
+set-option -g history-limit 50000
 
-set -g status-bg "default"
-set -g status-fg "default"
+# Capture the mouse and allows mouse events to be bound as key bindings.
+set-option -g mouse on
 
-set -g status-left "#[fg=brightgreen]#S #[fg=brightwhite]: "
-set -g status-right "#[fg=brightyellow](#h)"
-set -g window-status-format "#[fg=brightcyan]#I #W"
-set -g window-status-current-format "#[fg=brightmagenta][ #[fg=brightwhite]#I #W #[fg=brightmagenta]]"
+# When a window is closed, rename the other windows in numerical order.
+set-option -g renumber-windows on
 
-set -g automatic-rename on
-set -g mouse on
-set -g set-clipboard on
+# Appearance {{{1
+# ---------------
 
-set -g default-command bash
+# Status line.
+set-option -g status-bg "default"
+set-option -g status-fg "default"
+set-option -g status-left "#[fg=brightgreen]#S #[fg=brightwhite]: "
+set-option -g status-right "#[fg=brightyellow](#h)"
+set-option -g window-status-format "#[fg=brightcyan]#I #W"
+set-option -g window-status-current-format "#[fg=brightmagenta][ #[fg=brightwhite]#I #W #[fg=brightmagenta]]"
 
-# Pane numbering starting from 1
-set -g base-index 1
+# Make the border of the active pane more conspicuous.
+set-option -g pane-active-border-fg brightgreen
+set-option -g pane-border-fg brightblack
 
-# Make the border of the current pane more conspicuous.
-set -g pane-active-border-fg brightgreen
-set -g pane-border-fg brightblack
+# Window options {{{1
+# -------------------
 
-# Set the prefix to CTRL + Q.
+# Rename windows automatically based on `automatic-rename-format'.
+set-window-option -g automatic-rename on
+set-window-option -g automatic-rename-format "#{pane_current_command}"
+
+# Keybindings {{{1
+# ----------------
+
+# Change the prefix from C-b to C-q.
 unbind C-b
-set -g prefix ^Q
+set-option -g prefix ^Q
 bind q send-prefix
 
 # Split windows with the same directory as the current window.
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
+
+# vi-style key bidings for copy mode.
+set-window-option -g mode-keys vi
 
 # Move around panes with hjkl.
 bind h select-pane -L
@@ -53,6 +76,3 @@ bind < resize-pane -L 4
 bind > resize-pane -R 4
 bind - resize-pane -D 4
 bind + resize-pane -U 4
-
-# vi-style controls for copy mode
-setw -g mode-keys vi
