--- a/aria2/.aria2/aria2.conf
+++ b/aria2/.aria2/aria2.conf
@@ -33,4 +33,4 @@ split = 4
 summary-interval = 0
 
 # Pretend to be Google Chrome on Windows.
-user-agent = "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.116 Safari/537.36"
+user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.181 Safari/537.36"
