--- a/curl/.curlrc
+++ b/curl/.curlrc
@@ -11,7 +11,7 @@ progress-bar
 
 # Specify the User-Agent string to send to the HTTP server.
 # Pretend to be Google Chrome on Windows.
-user-agent = "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.116 Safari/537.36"
+user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.181 Safari/537.36"
 
 # When used with -s it makes curl show an error message if it fails.
 show-error
