--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -25,7 +25,7 @@ sub-pos = 95
 sub-font = "Nimbus Sans L"
 
 # Pretend to be Google Chrome on Windows.
-user-agent = "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.116 Safari/537.36"
+user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.181 Safari/537.36"
 
 # Video output.  Using the xv video output may result in blurry OSDs,
 # subtitles, etc.
