--- a/youtube-dl/.config/youtube-dl.conf
+++ b/youtube-dl/.config/youtube-dl.conf
@@ -7,7 +7,7 @@
 --no-check-certificate
 
 # Specify a custom user agent
---user-agent 'Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.116 Safari/537.36'
+--user-agent 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.181 Safari/537.36'
 
 # Write subtitle file
 --write-sub
