--- a/xnview/.config/xnviewmp/xnview.ini
+++ b/xnview/.config/xnviewmp/xnview.ini
@@ -3,11 +3,13 @@ startInFull=0
 sessionFlag=1
 sessionIdx=1
 updater=0
+OpenWith=/usr/bin/darktable, /usr/bin/gimp
+OpenWithName=Darktable, Gimp
 
 [Browser]
 customFilter=1409
 thumbnailFilter=1153
 
 [Viewer]
-infoTemplate={EXIF:Focal Length}mm f/{EXIF:F-Number} {EXIF:Exposure Time}s at ISO{EXIF:ISO Value}\n{Width}x{Height} - {Size KB}
+infoTemplate={EXIF:Focal Length}mm f/{EXIF:F-Number} {EXIF:Exposure Time}s at ISO {EXIF:ISO Value}\n{Width}x{Height} ({Size})
 viewFilter=1025
