--- a/xnview/.config/xnviewmp/xnview.ini
+++ b/xnview/.config/xnviewmp/xnview.ini
@@ -1,7 +1,6 @@
 [Start]
 startInFull=0
-sessionFlag=1
-sessionIdx=1
+sessionFlag=2
 updater=0
 OpenWith=/usr/bin/darktable, /usr/bin/gimp
 OpenWithName=Darktable, Gimp
@@ -13,3 +12,6 @@ thumbnailFilter=1153
 [Viewer]
 infoTemplate={EXIF:Focal Length}mm f/{EXIF:F-Number} {EXIF:Exposure Time}s at ISO {EXIF:ISO Value}\n{Width}x{Height} ({Size})
 viewFilter=1025
+
+[%General]
+showAgain=65536
