--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -12,8 +12,14 @@ loop = inf
 # Font for OSD.
 osd-font = "Nimbus Sans L"
 
+# Initial volume %
+volume = 64
+
 # Maximum amplification (include digital/softvol amplification) in percentage.
 volume-max = 300
+
+# Screenshots in the parent directory of the video.
+screenshot-template = "%x/%F_%n"
 
 # Load all subtitles in the current directory.
 sub-auto = all
@@ -26,10 +32,3 @@ sub-font = "Nimbus Sans L"
 
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.181 Safari/537.36"
-
-# Video output.  Using the xv video output may result in blurry OSDs,
-# subtitles, etc.
-# vo = "x11"
-
-# Initial volume %
-volume = 64
