--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -3,6 +3,10 @@
 # Pick English audio from available soundtracks.
 alang = en
 
+# Force stereo audio since I almost always watch movies with a headphone (e.g.,
+# 5 channel audio will be converted to stereo)
+audio-channels = "stereo"
+
 # Video cache size of 25 MB.
 cache = 25600
 
