Ask mpv to save state before exiting.

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -22,6 +22,9 @@ volume = 64
 # Maximum amplification (include digital/softvol amplification) in percentage.
 volume-max = 300
 
+# Resume playback after quitting.
+save-position-on-quit
+
 # Screenshots in the parent directory of the video.
 screenshot-template = "%x/%F_%n"
 
