--- a/offlineimap/.offlineimaprc
+++ b/offlineimap/.offlineimaprc
@@ -101,11 +101,10 @@ postsynchook = notmuch new
 [Repository syr-local]
 localfolders = ~/mail/syr
 type = Maildir
-folderfilter = lambda folder: folder.split('/')[0] not in ('trash')
+folderfilter = lambda folder: folder.split('/')[0] not in ('trash', 'spam')
 nametrans = lambda folder: {'inbox': 'INBOX',
                             'drafts': 'Drafts',
-                            'sent': 'Sent Items',
-                            'spam': 'Junk Email'}.get(folder, folder)
+                            'sent': 'Sent Items'}.get(folder, folder)
 
 [Repository syr-remote]
 auth_mechanisms = LOGIN
@@ -117,7 +116,7 @@ remotepasseval = get_pass("email/syr")
 ssl = yes
 sslcacertfile = /etc/ssl/certs/ca-certificates.crt
 type = IMAP
-folderfilter = lambda folder: folder.split('/')[0] not in ('Archive', 'Calendar', 'Contacts', 'Conversation History', 'Deleted Items', 'Journal', 'Notes', 'Outbox', 'Tasks')
+folderfilter = lambda folder: folder.split('/')[0] not in ('Archive', 'Calendar', 'Contacts', 'Conversation History', 'Deleted Items', 'Journal', 'Junk Email', 'Notes', 'Outbox', 'Tasks')
 nametrans = lambda folder: {'INBOX': 'inbox',
                             'Drafts': 'drafts',
                             'Sent Items': 'sent',
