Replace Lucida with Luxi.
For strange reasons, Lucida Grande's character "9" is not being rendered
by web browsers.  So let's use Luxi Sans as a stand-in for Lucida
Grande.  (They're very different fonts, but share some similarities.)

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -137,6 +137,16 @@
         </edit>
     </match>
 
+    <!-- Use "Luxi Sans" instead of "Lucida Grande" -->
+    <match target="pattern">
+        <test name="family">
+            <string>Lucida Grande</string>
+        </test>
+        <edit name="family" mode="assign">
+            <string>Luxi Sans</string>
+        </edit>
+    </match>
+
     <!-- Default serif, sans-serif, and monospace fonts -->
     <alias>
         <family>serif</family>
