--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 
 [user]
   name  = Manu Mannattil
-  email = "m""a""n""u"".""m""a""n""n""a""t""t""i""l""@""g""m""a""i""l"".""c""o""m"
+  email = manu.mannattil@gmail.com
 
 [core]
   attributesfile = ~/.gitattributes
