Set window titles.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,6 +50,10 @@ set-option -g pane-border-fg brightblack
 set-window-option -g automatic-rename on
 set-window-option -g automatic-rename-format "#{pane_current_command}"
 
+# Set terminal window titles.
+set-option -g set-titles on
+set-option -g set-titles-string "#I:#T"
+
 # Keybindings {{{1
 # ----------------
 
