Don't resume session on startup.

--- a/deadbeef/.config/deadbeef/config
+++ b/deadbeef/.config/deadbeef/config
@@ -44,3 +44,4 @@ hotkey.key30 b 0 0 next
 hotkey.key31 n 0 0 playback_random
 hotkey.key32 "Ctrl k" 0 0 toggle_stop_after_album
 hotkeys_created 1
+resume_last_session 0
