--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -17,6 +17,7 @@
   dc = diff --cached
   df = diff
   dt = difftool
+  empty-commit = commit --allow-empty-message -m ''
   lg = log --branches --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(blue)[%an]%Creset' --abbrev-commit --date-order
   st = status -s
   wd = diff --word-diff
