Tweaks for HiDPI p43s.

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -111,6 +111,7 @@
     <match target="pattern">
         <test name="family">
             <string>BlinkMacSystemFont</string>
+            <string>Arial</string>
         </test>
         <edit name="family" mode="assign">
             <string>Nimbus Sans L</string>
