--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -111,6 +111,15 @@
     <match target="pattern">
         <test name="family">
             <string>BlinkMacSystemFont</string>
+        </test>
+        <edit name="family" mode="assign">
+            <string>Nimbus Sans L</string>
+        </edit>
+    </match>
+
+    <!-- Use "Nimbus Sans L" instead of "Arial" -->
+    <match target="pattern">
+        <test name="family">
             <string>Arial</string>
         </test>
         <edit name="family" mode="assign">
