--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -30,6 +30,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run -fn 'Source Code Pro Semibold:size=9'
 
+bindsym $mod+p exec passmenu
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
