Remove xinput calls from ~/.xinitrc
We're now setting libinput settings globally in /etc/X11/xorg.conf.d.

--- a/etc/X11/xorg.conf.d/intel.conf
+++ b/etc/X11/xorg.conf.d/intel.conf
@@ -1,4 +1,4 @@
-# /etc/X11/xorg.conf.d/20-intel.conf
+# /etc/X11/xorg.conf.d/intel.conf
 #
 # This fixes tearing problems with video playback sometimes seen in
 # systems with integrated Intel graphics.  Worked even on an old 2008
