--- a/etc/X11/xorg.conf.d/p43s.conf
+++ b/etc/X11/xorg.conf.d/p43s.conf
@@ -1,4 +1,7 @@
-# X configuration specific to the P43s.
+# /etc/X11/xorg.conf.d/p43s.conf
+#
+# X configuration specific to the ThinkPad P43s.
+#
 
 # Trackpoint options.
 Section "InputClass"
