--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -3,9 +3,9 @@
 
 general {
   colors = true
-  color_bad = "#ca3300"
+  color_bad = "#ff8700"
   color_good = "#aaaaaa"
-  color_degraded = "#285577"
+  color_degraded = "#5fafaf"
   interval = 5
 }
 
