More fonts.conf tweaks.
- Don't set DPI in fonts.conf

- Several applications (e.g., i3lock, Mathematica, etc.) use the default
  sans-serif, serif, and monospace fonts as defaults.  So it makes sense
  to configure them in fonts.conf.

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -1,11 +1,6 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-    <!-- Resolution; target dots per inch -->
-    <match target="pattern">
-        <edit name="dpi" mode="assign">96</edit>
-    </match>
-
     <!-- Enable anti-aliasing -->
     <match target="font">
         <edit mode="assign" name="antialias" >
@@ -156,4 +151,36 @@
             <string>Luxi Sans</string>
         </edit>
     </match>
+
+    <!-- Several applications (e.g., i3lock, Mathematica, etc.) use the
+         default sans-serif, serif, and monospace fonts as defaults.  So
+         it makes sense to configure them here. -->
+
+    <!-- Default sans font -->
+    <alias>
+      <family>Nimbus Sans L</family>
+      <default>
+        <family>sans-serif</family>
+      </default>
+    </alias>
+    <alias>
+      <family>sans-serif</family>
+      <prefer>
+        <family>Nimbus Sans L</family>
+      </prefer>
+    </alias>
+
+    <!-- Default serif font -->
+    <alias>
+      <family>Nimbus Roman No9 L</family>
+      <default>
+        <family>serif</family>
+      </default>
+    </alias>
+    <alias>
+      <family>serif</family>
+      <prefer>
+        <family>Nimbus Roman No9 L</family>
+      </prefer>
+    </alias>
 </fontconfig>
