--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -1,11 +1,13 @@
 # i3status configuration file.
-# see "man i3status" for documentation.
+#
+# NOTE: Comment out system-wide configuration in /etc/i3status.conf
+#
 
 general {
   colors = true
   color_bad = "#ff8700"
   color_good = "#aaaaaa"
-  color_degraded = "#5fafaf"
+  color_degraded = "#4c7899" #"#5fafaf"
   interval = 5
 }
 
@@ -39,7 +41,7 @@ cpu_usage {
 }
 
 tztime local {
-  format = "%F %H:%M"
+  format = "%F %I:%M %P"
 }
 
 volume master {
