--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,7 +1,7 @@
 # i3wm configuration.
 
-# Set mod key to "Windows" key.
-set $mod Mod4
+# Basic {{{1
+# ----------
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -10,21 +10,20 @@ font pango:Source Code Pro Semibold 9
 # Don't change focused window based on the location of the mouse pointer.
 focus_follows_mouse no
 
-# Use Mouse+$mod to drag floating windows to their wanted position.
-floating_modifier $mod
+# By default windows ought to be tabbed, not tiled.
+workspace_layout tabbed
+
+# Keybindings {{{1
+# ----------------
+
+# Set mod key to the super (aka "Windows") key.
+set $mod Mod4
 
 # Start a terminal.
 bindsym $mod+Return exec terminal
 
 # Kill focused window.
 bindsym $mod+Shift+q kill
-
-# Start dmenu.
-bindsym $mod+d exec dmenu_run -fn 'Source Code Pro Semibold:size=9'
-
-# Run passmenu --  a script to choose pass-managed password store
-# entries using dmenu.
-bindsym $mod+p exec passmenu -fn 'Source Code Pro Semibold:size=9'
 
 # Change focus.
 bindsym $mod+h focus left
@@ -111,20 +110,29 @@ bindsym $mod+Shift+c reload
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3).
 bindsym $mod+Shift+r restart
 
-# Exit i3 (logs you out of your X session).
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# Application launchers {{{2
+# --------------------------
 
-# Enter the resize mode.
-bindsym $mod+r mode "resize"
+# Start dmenu.
+bindsym $mod+d exec dmenu_run -fn 'Source Code Pro Semibold:size=9'
+
+# Run passmenu --  a script to choose pass-managed password store
+# entries using dmenu.
+bindsym $mod+p exec passmenu -fn 'Source Code Pro Semibold:size=9'
+
+# Mouse bindings {{{2
+# -------------------
+
+# Use mouse+$mod to drag floating windows to their wanted position.
+floating_modifier $mod
 
 # The middle button over a titlebar kills the window.
 bindsym --release button2 kill
 
-# The middle button and a modifer over any part of the
-# window kills the window.
+# The middle button and a modifer over any part of the window kills the window.
 bindsym --whole-window $mod+button2 kill
 
-# The right button toggles floating
+# The right button toggles floating.
 bindsym button3 floating toggle
 bindsym --whole-window $mod+button3 floating toggle
 
@@ -140,36 +148,78 @@ bindsym --whole-window $mod+button3 floating toggle
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set 10%+
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
+# Volume raise/lower/mute and mic mute keys.
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute 1 toggle
 
+# Use arandr (a GUI interface to xrandr) to configure display.
 bindsym XF86Display exec --no-startup-id arandr
-# }}}
+
+# Binding mode for resizing windows {{{2
+# --------------------------------------
+
+# Enter the resize mode.
+bindsym $mod+r mode "resize"
 
 # Resize windows (you can also use the mouse for that).  These bindings
 # trigger as soon as you enter the resize mode.
 mode "resize" {
   # Pressing left will shrink the window's width.
-  # Pressing right will grow the window's width.
-  # Pressing up will shrink the window's height.
-  # Pressing down will grow the window's height.
   bindsym h resize shrink width 10 px or 10 ppt
-  bindsym j resize grow height 10 px or 10 ppt
-  bindsym k resize shrink height 10 px or 10 ppt
-  bindsym l resize grow width 10 px or 10 ppt
-
-  # Same bindings, but for the arrow keys.
   bindsym Left resize shrink width 10 px or 10 ppt
+
+  # Pressing down will grow the window's height.
+  bindsym j resize grow height 10 px or 10 ppt
   bindsym Down resize grow height 10 px or 10 ppt
+
+  # Pressing up will shrink the window's height.
+  bindsym k resize shrink height 10 px or 10 ppt
   bindsym Up resize shrink height 10 px or 10 ppt
+
+  # Pressing right will grow the window's width.
+  bindsym l     resize grow width 10 px or 10 ppt
   bindsym Right resize grow width 10 px or 10 ppt
 
-  # Back to normal: Enter or Escape
+  # Back to normal: Enter or Escape.
   bindsym Return mode "default"
   bindsym Escape mode "default"
 }
+
+# Binding mode for launching applications {{{2
+# --------------------------------------------
+
+set $mode_open [b]rowser [f]iles [m]usic [p]rivate-browser
+bindsym $mod+o mode "$mode_open"
+
+mode "$mode_open" {
+    bindsym b exec firefox; mode "default"
+    bindsym f exec spacefm --no-saved-tabs $HOME; mode "default"
+    bindsym m exec deadbeef; mode "default"
+    bindsym p exec ff-private; mode "default"
+
+    bindsym Escape mode "default"
+    bindsym Return mode "default"
+}
+
+# Binding mode for exiting {{{2
+# -----------------------------
+
+set $mode_exit [e]xit [p]oweroff [r]eebot
+bindsym $mod+shift+e mode "$mode_exit"
+
+mode "$mode_exit" {
+    bindsym e exec i3-msg exit
+    bindsym p exec poweroff
+    bindsym r exec reboot
+
+    bindsym Escape mode "default"
+    bindsym Return mode "default"
+}
+
+# i3bar configuration {{{1
+# ------------------------
 
 # Start i3bar to display a workspace bar (plus the system information
 # i3status finds out, if available)
@@ -179,7 +229,6 @@ bar {
   separator_symbol "/"
 
   colors {
-    separator "#285577"
     statusline "#aaaaaa"
   }
 
@@ -193,6 +242,17 @@ bar {
 # ------------------
 
 for_window [class="Arandr"] floating enable
+for_window [class="matplotlib"] floating enable
+for_window [class="Anki"] floating enable
+
+# Terminals and file browser (workspace 1) {{{2
+# ---------------------------------------------
+
+for_window [class="Spacefm"] move container to workspace 1
+for_window [class="Spacefm"] focus
+
+for_window [class="URxvt"] move container to workspace 1
+for_window [class="URxvt"] focus
 
 # Browsers (workspace 2) {{{2
 # ---------------------------
@@ -221,7 +281,6 @@ for_window [class="Filezilla"] focus
 
 for_window [class="Liferea"] move container to workspace 4
 for_window [class="Liferea"] focus
-
 
 # Large GUIs (workspace 9) {{{2
 # -----------------------------
