--- a/xdg/.local/share/applications/spacefm.desktop
+++ b/xdg/.local/share/applications/spacefm.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Name=SpaceFM
 Categories=System;FileTools;Utility;Core;GTK;FileManager;
-Exec=spacefm --reuse-tab %F
+Exec=spacefm %F
 Icon=spacefm
 StartupNotify=true
 Type=Application
