Add Posteo Mutt configuration.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -2,7 +2,7 @@
 
 [user]
   name  = Manu Mannattil
-  email = manu.mannattil@gmail.com
+  email = manu.mannattil@posteo.net
 
 [core]
   attributesfile = ~/.gitattributes
