--- a/msmtp/.msmtprc
+++ b/msmtp/.msmtprc
@@ -22,6 +22,24 @@ from manu.mannattil@gmail.com
 user manu.mannattil@gmail.com
 passwordeval "pass email/gmail | head -n 1"
 
+# Posteo {{{1
+# -----------
+
+account posteo
+domain [192.168.1.1]
+host posteo.de
+port 465
+protocol smtp
+
+auth on
+tls on
+tls_nocertcheck
+tls_starttls off
+
+from manu.mannattil@posteo.net
+user manu.mannattil@posteo.net
+passwordeval "pass email/posteo | head -n 1"
+
 # Yahoo! mail {{{1
 # ----------------
 
