Display CPU temperature.

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -244,6 +244,7 @@ bar {
 for_window [class="Arandr"] floating enable
 for_window [class="matplotlib"] floating enable
 for_window [class="Anki"] floating enable
+for_window [class="Pavucontrol"] floating enable
 
 # Default floating mode for windows (e.g., pop-up) that one wouldn't use for
 # more than a few seconds.
