--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -14,6 +14,7 @@ general {
 order += "wireless _first_"
 order += "battery all"
 order += "cpu_usage"
+order += "cpu_temperature 0"
 order += "volume master"
 order += "tztime local"
 
@@ -38,6 +39,12 @@ load {
 
 cpu_usage {
   format = "cpu %usage"
+}
+
+cpu_temperature 0 {
+	format = "tmp %degrees°"
+	path = "/sys/class/thermal/thermal_zone0/temp"
+	max_threshold = 90
 }
 
 tztime local {
