Change accelelation profile for P43s.

--- a/etc/X11/xorg.conf.d/p43s.conf
+++ b/etc/X11/xorg.conf.d/p43s.conf
@@ -1,7 +1,4 @@
-# /etc/X11/xorg.conf.d/p43s.conf
-#
 # X configuration specific to the ThinkPad P43s.
-#
 
 # Trackpoint options.
 Section "InputClass"
@@ -10,11 +7,10 @@ Section "InputClass"
     MatchProduct "TPPS/2 Elan TrackPoint"
 
     # After several experiments, I've found that I like
-    # using a flat acceleration profile with an acceleration
-    # of 0.5 for the trackpoint.  The defaults aren't good
-    # enough for a HiDPI display.
-    Option "AccelProfile" "flat"
-    Option "AccelSpeed" "0.5"
+    # using an adaptive acceleration profile with an
+    # acceleration of 0.25 for the trackpoint.
+    Option "AccelProfile" "adaptive"
+    Option "AccelSpeed" "0.25"
 EndSection
 
 # Touchpad options.
