mail: add Gandi configuration.

--- a/msmtp/.msmtprc
+++ b/msmtp/.msmtprc
@@ -4,6 +4,24 @@
 # engineered spam filters that mark messages as spam based on the
 # "Received:" header.
 
+# Gandi {{{1
+# ----------
+
+account gandi
+domain [192.168.1.1]
+host mail.gandi.net
+port 465
+protocol smtp
+
+auth on
+tls on
+tls_nocertcheck
+tls_starttls off
+
+from manu@polhode.org
+user manu@polhode.org
+passwordeval "pass email/gandi | head -n 1"
+
 # Gmail {{{1
 # ----------
 
