mpv: use Intel's vaapi for video decoding.

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -10,6 +10,10 @@ audio-channels = "stereo"
 # Video cache size of 25 MB.
 cache = 25600
 
+# Use Intel's iGPU to decode video.
+# https://lists.debian.org/debian-user/2018/06/msg00306.html
+hwdec = vaapi
+
 # Loop playlist infinitely.
 loop = inf
 
