qpdfview: move to new version.

--- a/qpdfview/.config/qpdfview/shortcuts.conf
+++ b/qpdfview/.config/qpdfview/shortcuts.conf
@@ -5,11 +5,13 @@ bookmarksDockToggleView=@Invalid()
 cancelSearch=Esc
 closeAllTabs=Ctrl+Shift+W
 closeAllTabsButCurrent=Ctrl+Alt+W
+closeCurrentView=@Invalid()
 closeTab=Ctrl+W
 contents=F1
 continuousMode=Alt+C
 convertToGrayscale=@Invalid()
 copyToClipboardMode=@Invalid()
+darkenWithPaperColor=@Invalid()
 editToolBarToggleView=@Invalid()
 exit=@Invalid()
 fileToolBarToggleView=@Invalid()
@@ -24,9 +26,11 @@ jumpBackward=Ctrl+O
 jumpForward=Ctrl+I
 jumpToPage=Ctrl+G
 lastPage=Shift+G
+lightenWithPaperColor=@Invalid()
 moveDown=J
 moveLeft=H
 moveRight=L
+moveToInstance=@Invalid()
 moveUp=K
 multiplePagesMode=Alt+M
 nextBookmarkAction=@Invalid()
@@ -35,6 +39,7 @@ nextTab=Ctrl+Tab
 open=@Invalid()
 openContainingFolder=@Invalid()
 openCopyInNewTab=@Invalid()
+openCopyInNewWindow=@Invalid()
 openInNewTab=@Invalid()
 originalSize=0
 outlineDockToggleView=F6
@@ -47,17 +52,23 @@ propertiesDockToggleView=F7
 refresh=Ctrl+R
 removeAllBookmark=@Invalid()
 removeBookmark=@Invalid()
+restoreMostRecentlyClosedTab=Alt+Shift+W
 rightToLeftMode=@Invalid()
 rotateLeft=Ctrl+Left
 rotateRight=Ctrl+Right
+save=Ctrl+S
 saveAs=Ctrl+Shift+S
 saveCopy=Ctrl+S
 search=/
+setFirstPage=@Invalid()
 skipBackward=Ctrl+U
 skipForward=Ctrl+D
+splitViewHorizontally=@Invalid()
+splitViewVertically=@Invalid()
 thumbnailsDockToggleView=F8
 toggleMenuBar=Alt+Shift+M
 toggleToolBars=Alt+Shift+T
+trimMargins=Ctrl+Shift+U
 twoPagesMode=Alt+D
 twoPagesWithCoverPageMode=@Invalid()
 viewToolBarToggleView=@Invalid()
