etc/*: move to Debian from Ubuntu

--- a/etc/thinkfan.conf
+++ b/etc/thinkfan.conf
@@ -1,3 +1,4 @@
+# vim: ft=conf sw=8 noet
 # ThinkFan configuration.
 #
 # Syntax
@@ -13,11 +14,22 @@
 
 tp_fan /proc/acpi/ibm/fan
 
-hwmon /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input
-hwmon /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp2_input
-hwmon /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp3_input
-hwmon /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp4_input
-hwmon /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp5_input
+# Find the type of thermal_zone before adding, e.g., on my P43s
+# thermal_zone7 is the WiFi adapter:
+#
+#   $ cat /sys/devices/virtual/thermal/thermal_zone7/type
+#   iwlwifi_1
+#
+# However, the WiFi module gets loaded in the end, after ThinkFan
+# starts.  This causes ThinkFan to fail since it can't read
+# thermal_zone7's temperature.
+hwmon /sys/devices/virtual/thermal/thermal_zone0/temp
+hwmon /sys/devices/virtual/thermal/thermal_zone1/temp
+hwmon /sys/devices/virtual/thermal/thermal_zone2/temp
+hwmon /sys/devices/virtual/thermal/thermal_zone3/temp
+hwmon /sys/devices/virtual/thermal/thermal_zone4/temp
+hwmon /sys/devices/virtual/thermal/thermal_zone5/temp
+hwmon /sys/devices/virtual/thermal/thermal_zone6/temp
 
 (0,	0,	55)
 (1,	48,	60)
