--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -32,11 +32,15 @@ screenshot-template = "%x/%F_%n"
 # Load all subtitles in the current directory.
 sub-auto = all
 
+# Color of subtitles r/g/b (yellow).
+sub-color = 1.0/0.75/0.0
+
 # Postion of subtitles relative to the screen (in percentage).
-sub-pos = 95
+sub-pos = 90
 
 # Font for subtitles.
 sub-font = "Nimbus Sans L"
+sub-font-size = 42
 
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36"
