mpv: fix path template for screenshots.

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -27,7 +27,7 @@ volume-max = 300
 save-position-on-quit
 
 # Screenshots in the parent directory of the video.
-screenshot-template = "%x/%F_%n"
+screenshot-template = "%x%F_%n"
 
 # Load all subtitles in the current directory.
 sub-auto = all
