qpdfview: new shortcut to invert colors.

--- a/qpdfview/.config/qpdfview/shortcuts.conf
+++ b/qpdfview/.config/qpdfview/shortcuts.conf
@@ -21,7 +21,7 @@ firstPage=G
 fitToPageSizeMode=+
 fitToPageWidthMode=_
 fullscreen=@Invalid()
-invertColors=@Invalid()
+invertColors=Shift+I
 jumpBackward=Ctrl+O
 jumpForward=Ctrl+I
 jumpToPage=Ctrl+G
